Fixed spacing issue

--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -14,6 +14,10 @@ body {
     width: 100%;
 }
 
+.button--class {
+    margin-bottom: 0 !important;
+}
+
 .button--class__name {
     flex: 1;
 }
@@ -37,16 +41,18 @@ body {
 
 .class-container {
     margin-top: 0.1rem;
-    height: 9.38rem;
-    max-height: 9.38rem;
+    height: 20vh;
+    max-height: 20vh;
     overflow: hidden;
     overflow-y: scroll;
-    .column--button:not(:first-child) {
-        padding-top: 0.1rem;
-    }
-    .column--button {
-        padding-bottom: 0.1rem;
-    }
+    padding-left: 1.25em;
+}
+
+.column--button {
+    height: 20vh;
+    max-height: 20vh;
+    overflow: hidden;
+    overflow-y: scroll;
 }
 
 .class-group {
@@ -68,7 +74,7 @@ body {
 }
 
 .box--semester {
-    height: 16.25rem;
+    height: 40vh;
     padding-bottom: 0.75rem;
 }
 
